I updated the program to utilize the name of the user in the print statements.

--- a/group_project.ipynb
+++ b/group_project.ipynb
@@ -2,20 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter your name. Noah\n",
+      "Enter your age. 21\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Noah you are an adult and can legally gamble, buy alcohol, and much more!\n"
+     ]
+    }
+   ],
    "source": [
     "name = input(\"Enter your name.\")\n",
     "age = int(input(\"Enter your age.\"))\n",
     "\n",
     "if age >= 21:\n",
-    "    print(\"You are an adult and can legally gamble, buy alcohol, and much more!\")\n",
+    "    print(name + \" you are an adult and can legally gamble, buy alcohol, and much more!\")\n",
     "elif age >= 18:\n",
-    "    print(\"You are an adult but cannot gamble and do other things yet. But you can go to war!\")\n",
+    "    print(name + \" you are an adult but cannot gamble and do other things yet. But you can go to war!\")\n",
     "else:\n",
-    "    print(\"You are not yet an adult.\")"
+    "    print(name + \" you are not yet an adult.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
